[package]
name = "dns-exfil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
clap = { version = "4.0.18", features = ["derive", "env"] }
env_logger = "0.9.1"
log = "0.4.17"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
trust-dns-server = "0.22.0"
