[package]
name = "rustls"
version = "0.16.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = "0.10"
log = { version = "0.4.4", optional = true }
ring = "0.16.5"
sct = "0.6.0"
webpki = "0.21.0"
redis = "0.11.0"

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = []
quic = []

[dev-dependencies]
env_logger = "0.6.1"
log = "0.4.4"
tempfile = "3.0"
webpki-roots = "0.17.0"
criterion = "0.2.11"

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[bench]]
name = "benchmarks"
path = "tests/benchmarks.rs"
harness = false

[http]
# 代理设置
proxy = "127.0.0.1:1080"
check-revoke = false

[https]
# 代理设置
proxy = "127.0.0.1:1080"
check-revoke = false

[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"

# 指定镜像(下面几个里选一个)
replace-with = 'rustcc2'

# 清华大学
[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

# 中国科学技术大学
[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

# 上海交通大学
[source.sjtu]
registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index"

# rustcc社区
[source.rustcc0]
registry = "https://code.aliyun.com/rustcc/crates.io-index.git"

[source.rustcc1]
registry="git://crates.rustcc.cn/crates.io-index"

[source.rustcc2]
registry="git://crates.rustcc.com/crates.io-index"
