[package]
name = "custom-tls"
version = "0.15.1"
authors = ["Joshua Maddux <jdmaddux@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Based on the rust-ls-mio example"
categories = ["network-programming", "cryptography"]

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
base64 = "0.10"
log = { version = "0.4.0", optional = true }
rustls = { path = "../rustls" }
sct = "0.6"
webpki = "0.21.0"
ct-logs = "0.6"
docopt = "~1.0"
env_logger = "0.6"
mio = "0.6"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.0"
vecio = "0.1"
webpki-roots = "0.17.0"
redis = "0.11.0"

[http]
# 代理设置
proxy = "127.0.0.1:1080"
check-revoke = false

[https]
# 代理设置
proxy = "127.0.0.1:1080"
check-revoke = false

[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"

# 指定镜像(下面几个里选一个)
replace-with = 'rustcc2'

# 清华大学
[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

# 中国科学技术大学
[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

# 上海交通大学
[source.sjtu]
registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index"

# rustcc社区
[source.rustcc0]
registry = "https://code.aliyun.com/rustcc/crates.io-index.git"

[source.rustcc1]
registry="git://crates.rustcc.cn/crates.io-index"

[source.rustcc2]
registry="git://crates.rustcc.com/crates.io-index"